--- a/TP1/punto1/pom.xml
+++ b/TP1/punto1/pom.xml
@@ -56,6 +56,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>org.example.Server</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
