--- a/TP1/punto3/Dockerfile
+++ b/TP1/punto3/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:latest
-COPY target/punto3-1.0-SNAPSHOT.jar /usr/src/punto3-1.0-SNAPSHOT.jar
+COPY target/server.jar /usr/src/server.jar
 WORKDIR /usr/src/
-ENTRYPOINT ["java", "-jar", "/usr/src/punto3-1.0-SNAPSHOT.jar"]
+EXPOSE 9090
+ENTRYPOINT ["java", "-jar", "/usr/src/server.jar"]
