--- a/TP1/punto2/pom.xml
+++ b/TP1/punto2/pom.xml
@@ -58,6 +58,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>org.example.Cliente</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
