--- a/TP1/punto7/pom.xml
+++ b/TP1/punto7/pom.xml
@@ -58,7 +58,7 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <configuration>
-            <mainClass>delCliente.Client</mainClass>
+            <mainClass>org.example.cliente</mainClass>
           </configuration>
         </plugin>
       </plugins>
