--- a/TP2/punto3/pom.xml
+++ b/TP2/punto3/pom.xml
@@ -11,7 +11,6 @@
   <name>punto3</name>
 
 
-
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -28,6 +27,7 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.github.jitpack/maven-simple -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -63,11 +63,11 @@
       <version>2.8.6</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.sitewhere/sitewhere-rabbit-mq -->
-    <dependency>
+    <!--<dependency>
       <groupId>com.sitewhere</groupId>
       <artifactId>sitewhere-rabbit-mq</artifactId>
       <version>1.11.0</version>
-    </dependency>
+    </dependency>-->
 
   </dependencies>
 
@@ -78,7 +78,7 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <configuration>
-            <mainClass>org.example</mainClass>
+            <mainClass>server.Main</mainClass>
           </configuration>
         </plugin>
       </plugins>
