--- a/TP2/punto3/pom.xml
+++ b/TP2/punto3/pom.xml
@@ -63,11 +63,11 @@
       <version>2.8.6</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.sitewhere/sitewhere-rabbit-mq -->
-    <!--<dependency>
+    <dependency>
       <groupId>com.sitewhere</groupId>
       <artifactId>sitewhere-rabbit-mq</artifactId>
       <version>1.11.0</version>
-    </dependency>-->
+    </dependency>
 
   </dependencies>
 
